@@ -1,0 +1,13 @@
+# The list of known virtual facilities that init scripts may depend on.
+#
+# Last updated: 2010-05-02
+
+$local_fs
+$named
+$network
+$portmap
+$remote_fs
+$syslog
+$time
+$x-display-manager
+$x-font-server
