@@ -52,3 +52,11 @@ Description: {$description} -- missing runlevels
  This is yet another test package designed to exercise the checking of
  init scripts by Lintian.  It is part of the Lintian test suite and may
  do very odd things.  It should not be installed like a regular package.
+
+Package: {$srcpkg}-virtual
+Architecture: {$architecture}
+Depends: $\{shlibs:Depends\}, $\{misc:Depends\}
+Description: {$description} -- virtual facilities
+ Test package to exercise the virtual facilities in init.d scripts
+ checks by lintian.  It is part of the Lintian test suite and may
+ do very odd things.  It should not be installed like a regular package.
